# raptorlift_ws

./: .gitignore  ros-jazzy-steering-controllers-library_4.36.0-1noble.debian.tar.xz  ros-jazzy-steering-controllers-library_4.36.0-1noble.dsc  setup_env.bash
docs/: architecture.md  lidar_setting.md  raptorlift_ros2_control_v0.1.0.md  usage.md
references/: kinematic.md  mapping.md
src/ackermann_control/cmdvel_to_ackermann/: package.xml
src/ackermann_control/cmdvel_to_ackermann/launch/: cmdvel_to_ackermann.launch.py
src/ackermann_control/cmdvel_to_ackermann/scripts/: cmdvel_to_ackermann.py
src/isaacsim/scripts/: run_isaacsim.py
src/moveit/moveit_resources/: README.md
src/moveit/moveit_resources/moveit_resources/: package.xml
src/moveit/moveit_resources/panda_moveit_config/config/: chomp_planning.yaml  gripper_moveit_controllers.yaml  joint_limits.yaml  kinematics.yaml  lerp_planning.yaml  moveit_controllers.yaml  ompl_planning.yaml  panda.ros2_control.xacro  panda.srdf  panda_arm_hand.srdf.xacro  panda_hand.ros2_control.xacro  ros2_controllers.yaml  trajopt_planning.yaml
src/raptor_navigation/: CMakeLists.txt  package.xml
src/raptor_navigation/behavior_trees/: ackermann_navigate.xml
src/raptor_navigation/config/: nav2_params.yaml  slam_params.yaml
src/raptor_navigation/launch/: bringup_with_nav.launch.py  lidar_processing.launch.py  navigation.launch.py  slam.launch.py
src/raptor_navigation/maps/: test_map.pgm  test_map.yaml
src/raptor_navigation/rviz/: navigation.rviz
src/raptorlift_bringup/: CMakeLists.txt  package.xml
src/raptorlift_bringup/config/: raptorlift_controllers.yaml
src/raptorlift_bringup/launch/: raptorlift.launch.py
src/raptorlift_camera/: CMakeLists.txt  package.xml
src/raptorlift_camera/config/: camera.yaml
src/raptorlift_camera/launch/: camera.launch.py
src/raptorlift_description/: CMakeLists.txt  manual.md  package.xml
src/raptorlift_description/config/: ackermann_controller.yaml  nav2_params.yaml
src/raptorlift_description/launch/: display.launch.py  isaac_sim.launch.py  navigation.launch.py
src/raptorlift_description/rviz/: navigation.rviz  raptorlift.rviz
src/raptorlift_description/scripts/: add_lidar.py  setup_isaac_sim.py
src/raptorlift_description/urdf/: raptorlift.urdf
src/raptorlift_description/urdf/raptorlift/: raptorlift.usd  raptorlift_configs.usd  tb3_burger_testing.usd
src/raptorlift_description/urdf/raptorlift/configuration/: raptorlift_base.usd  raptorlift_physics.usd  raptorlift_robot.usd  raptorlift_sensor.usd
src/raptorlift_hardware/: CMakeLists.txt  README.md  package.xml  raptorlift_hardware.xml
src/raptorlift_hardware/config/: hardware_params.yaml
src/raptorlift_hardware/include/raptorlift_hardware/: pid_controller.hpp  raptorlift_hardware.hpp  visibility_control.h
src/raptorlift_hardware/src/: raptorlift_hardware.cpp
src/raptorlift_hardware_bridge/: CMakeLists.txt  README.md  package.xml
src/raptorlift_hardware_bridge/config/: hardware_bridge.yaml
src/raptorlift_hardware_bridge/include/raptorlift_hardware_bridge/: hardware_bridge.hpp  modbus_driver.hpp  pid_controller.hpp
src/raptorlift_hardware_bridge/launch/: hardware_bridge.launch.py
src/raptorlift_hardware_bridge/src/: hardware_bridge.cpp  modbus_driver.cpp
src/raptorlift_msgs/: CMakeLists.txt  package.xml
src/raptorlift_teleop/: CMakeLists.txt  package.xml
src/raptorlift_teleop/config/: gamepad_config.yaml  twist_mux.yaml  velocity_scaler.yaml
src/raptorlift_teleop/docs/: teleop_architecture.md
src/raptorlift_teleop/include/raptorlift_teleop/: gamepad_teleop.hpp  velocity_scaler.hpp
src/raptorlift_teleop/launch/: gamepad_teleop.launch.py
src/raptorlift_teleop/src/: gamepad_teleop.cpp  velocity_scaler.cpp
src/raptorlift_webcam/: CMakeLists.txt  package.xml
src/raptorlift_webcam/config/: detection.yaml  webcam.yaml
src/raptorlift_webcam/launch/: detection.launch.py  webcam.launch.py
src/raptorlift_webcam/scripts/: detection_node.py
src/twist_mux/: CHANGELOG.rst
src/twist_mux/config/: twist_mux_locks.yaml  twist_mux_topics.yaml
src/twist_mux/launch/: twist_mux.launch  twist_mux_launch.py
src/twist_mux/src/: twist_mux.cpp
