<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raptorlift_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for RaptorLift Ackermann forklift</description>
  <maintainer email="yongseung@raptorlift.com">Yongseung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ackermann_steering_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>raptorlift_description</exec_depend>
  <exec_depend>raptorlift_hardware_bridge</exec_depend>
  <exec_depend>raptorlift_teleop</exec_depend>
  <exec_depend>topic_based_ros2_control</exec_depend>
  <exec_depend>joy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
