<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raptorlift_webcam</name>
  <version>0.1.0</version>
  <description>USB webcam bringup for RaptorLift forklift</description>
  <maintainer email="yongseung@raptorlift.com">Yongseung</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>usb_cam</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- YOLOv11 detection node dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
